Fixed bug: Menu must always be visible in tablet mode

--- a/css/index.css
+++ b/css/index.css
@@ -674,6 +674,7 @@ section {
     }
 
     .flex--menu {
+        display: flex;
         flex: 1 1 90%;
     }
 
